changed border to half black

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               cover of Taylor classics. The music speaks for itself: take a
               listen!
             </p>
+            <button id="button button-listen"
           </div>
         </div>
 
