updated testimonials and bio

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               cover of Taylor classics. The music speaks for itself: take a
               listen!
             </p>
-            <button id="button button-listen"
+            <button id="button button-listen"></button>
           </div>
         </div>
 
